--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -4,9 +4,9 @@ spring:
   cloud:
     config:
       enabled: true
-      uri: http://localhost:8091
+      uri: http://localhost:8081
   datasource:
-    url: jdbc:mysql://localhost:3306/bdtemp
+    url: jdbc:mysql://localhost:3306/justificativos
     username: root
     password: Chile&2022
   jpa:
